@@ -4,9 +4,10 @@ module Gluon
   # = namespace for web components
   module Web
     autoload :ErrorMessages, 'gluon/web/error'
-    autoload :ImportTable, 'gluon/web/table'
     autoload :ForeachTable, 'gluon/web/table'
+    autoload :ImportTable, 'gluon/web/table'
     autoload :OneTimeToken, 'gluon/web/token'
+    autoload :Table, 'gluon/web/table'
   end
 end
 
